# pyside-native-lottie

./: MANIFIEST.in  pyproject.toml
examples/: animation.json  app.qml  main.py
native_lottie/: __init__.py  engine.py  librlottie.dylib
