[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "native-lottie"
version = "1.0.1"
description = "Motor Lottie Nativo"
readme = "README.md"
authors = [{ name = "Rodrigo Godoy", email = "dev@remasep.cl" }]
requires-python = ">=3.8"
dependencies = ["PySide6"]

[tool.setuptools]
packages = ["native_lottie"]
include-package-data = true  # <--- ESTO ES VITAL

[tool.setuptools.package-data]
native_lottie = ["*.dylib", "*.dll"]