[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "native-lottie"
version = "1.0.2"
description = "Motor Lottie Nativo"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["PySide6"]
authors = [{ name = "RemasepDev", email = "dev@remasep.cl" }]

[tool.setuptools]
packages = ["native_lottie"]
# ESTA ES LA LINEA QUE FALTABA ANTES:
include-package-data = true

[tool.setuptools.package-data]
# ESTO ES REDUNDANTE PERO NECESARIO POR SEGURIDAD:
native_lottie = ["*.dylib", "*.dll"]